--- a/contact.html
+++ b/contact.html
@@ -196,39 +196,7 @@
       </div>
     </div>
   </div>
-    <!--  <div class="Separator"><br /><br /><br /><br /></div>-->
-
-    <!--  <nav>
-        <ul class="Menu__List__holder">
-            <li><a href="./index.html" class="nav__link">Home</a></li>
-            <li><a href="#" class="nav__link">Projects</a></li>
-            <li><a href="#about" class="nav__link">About</a></li>
-            <li><a href="#" class="nav__link">Certifications</a></li>
-            <li><a href="#" class="nav__link">Social Media</a></li>
-            <li><a href="./gallery.html" class="nav__link">Gallery</a></li>
-            <li><a href="#" class="nav__link">Music</a></li>
-            <li><a href="#" class="nav__link">Blogs</a></li>
-            <li><a href="#contact" class="nav__link">Contact</a></li>
-            <li><a href="#" class="nav__link"><img src="./images/icons/light.svg" class="img-fluid mode__icon" alt="Modes"></a></li>
-        </ul>
-        <div class="burger">
-            <div class="line-1"></div>
-            <div class="line-2"></div>
-            <div class="line-3"></div>
-        </div>
-    </nav>
-
-    <div class="Separator">
-        <br><br><br><br>
-    </div>
-
-    <div class="Separator__2">
-        <br><br>
-        <br><br>
-    </div>
--->
-
-    <!-- Contact Section -->
+    
     <!-- Contact Section -->
     <div class="col-lg-10">
     <section style="min-height: 87vh;" class="Contact__Section" id="contact">
@@ -316,8 +284,7 @@
     <!-- Footer Design -->
     <footer >
       <p >
-        Created With ❤️ By Samarth | Copyright &copy;
-        <span class="Footer__year">2021</span> All rights reserved !
+        Copyright © 2021 Samarth Goyal, All Rights Reserved
       </p>
     </footer>
 
