--- a/music.html
+++ b/music.html
@@ -450,7 +450,7 @@ padding-top: 60px;
   <div class="col-lg-9 mus">
 
 
-    <div class="wrapper1">
+    <div class="wrapper">
       <div class="top-bar">
         <i class="material-icons">expand_more</i>
         <span>Now Playing</span>
