--- a/gallery.html
+++ b/gallery.html
@@ -71,7 +71,7 @@
                 <h5 >Music</h5></a>
               </li>
               <li class="nav-list-item">
-                <a href="#" class="nav-link">  <i class="fas fa-blog"></i>
+                <a href="/blog" class="nav-link">  <i class="fas fa-blog"></i>
                     <h5>Blogs</h5></a>
               </li>
               <li class="nav-list-item">
@@ -82,6 +82,20 @@
                 <div class="btn-toggle button" type="button" id="dark-mode">
                   <i class="fas fa-moon" id="fa-moon1"></i>
                   <i class="fas fa-sun sun1" id="img-fluid1"></i>
+                </div>
+              </li>
+
+              <li>
+                <div  class="time">
+                  <span class="Time"></span>
+                  <span class="Format"></span>
+                  <div class="date">
+                        <span class="Month"></span>
+                        <span class="Day"></span>
+                  </div>
+                  <div class='partition'>
+                    <span class='temp'></span>
+                  </div>
                 </div>
               </li>
             </ul>
