--- a/certificates/cr9.html
+++ b/certificates/cr9.html
@@ -72,7 +72,7 @@
                 <h5 >Music</h5></a>
               </li>
               <li class="nav-list-item">
-                <a href="#" class="nav-link">  <i class="fas fa-blog"></i>
+                <a href="/blog" class="nav-link">  <i class="fas fa-blog"></i>
                     <h5>Blogs</h5></a>
               </li>
               <li class="nav-list-item">
@@ -83,6 +83,20 @@
                 <div class="btn-toggle button" type="button" id="dark-mode">
                   <i class="fas fa-moon" id="fa-moon1"></i>
                   <i class="fas fa-sun sun1" id="img-fluid1"></i>
+                </div>
+              </li>
+
+              <li>
+                <div  class="time">
+                  <span class="Time"></span>
+                  <span class="Format"></span>
+                  <div class="date">
+                        <span class="Month"></span>
+                        <span class="Day"></span>
+                  </div>
+                  <div class='partition'>
+                    <span class='temp'></span>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -145,7 +159,7 @@
               </a>
             </li>
             <li class="menuItem">
-              <a href="#" id="constantManagerBtn" class="menuOption">
+              <a href="/blog" id="constantManagerBtn" class="menuOption">
                 <i class="fas fa-blog"></i>
                 <h5 class="menuText">Blogs</h5>
               </a>
@@ -156,6 +170,8 @@
                 <h5 class="menuText">Contact</h5>
               </a>
             </li>
+
+            
           </ul>
 
 
