--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
               <div class="line line3"></div>
             </div>
             <ul class="nav-list">
-              <li class="nav-list-item"><a href="./index.html" class="nav-link"><img src="./images/Logo.png" class="img-fluid" alt="Logo" width="30" height="30" />Home</a></li>
+              <li class="nav-list-item"><a href="./index.html" class="nav-link"><img src="./images/Logo.png" class="img-fluid" alt="Logo" width="30" height="30" /><h5>Home</h5></a></li>
               <li class="nav-list-item"><a href="#about"  class="nav-link"><i class="fas fa-info"></i>
               <h5 >About</h5></a></li>
               <li class="nav-list-item">
