--- a/gallery.html
+++ b/gallery.html
@@ -1,111 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Samarth Portfolio</title>
-    <!-- Bootstrap Css -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <title>Samarth Portfolio</title>
+  <!-- Bootstrap Css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 
-    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom Css -->
-    <link rel="stylesheet" href="./css/gallery.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/sidebar.css" />
+  <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-  </head>
+  <!-- Custom Css -->
+  <link rel="stylesheet" href="./css/gallery.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/sidebar.css" />
 
-  <style>
-    h1 {
-      text-align: center;
-    }
-  </style>
-  <body>
-    <!--  <div class="Separator"><br /><br /><br /><br /></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+</head>
+
+<style>
+  h1 {
+    text-align: center;
+  }
+</style>
+
+<body>
+  <!--  <div class="Separator"><br /><br /><br /><br /></div>
 
     <div class="Separator__2">
       <br /><br />
       <br /><br />
     </div>-->
 
-    <div class="con">
-          <div class="nav-bar">
-            <div class="toggle-menu">
-              <div class="line line1"></i></div>
-              <div class="line line2"></div>
-              <div class="line line3"></div>
-            </div>
-            <ul class="nav-list">
-              <li class="nav-list-item"><a href="./index.html" class="nav-link"><img src="./images/Logo.png" class="img-fluid" alt="Logo" width="30" height="30" />Home</a></li>
-              <li class="nav-list-item"><a href="#about"  class="nav-link"><i class="fas fa-info"></i>
-              <h5 >About</h5></a></li>
-              <li class="nav-list-item">
-                <a href="#" class="nav-link">    <i class="fas fa-border-all"></i>
-                    <h5 >Projects</h5></a>
-              </li>
-              <li class="nav-list-item"><a href="./certificates/cr-main.html" class="nav-link"><i class="fas fa-certificate"></i>
-              <h5 >Certificate</h5></a></li>
-              <li class="nav-list-item">
-                <a href="./gallery.html" class="nav-link"><i class="fas fa-images"></i>
-                <h5 >Gallery</h5></a>
-              </li>
-              <li class="nav-list-item">
-                <a href="./music.html" class="nav-link"><i class="fas fa-play"></i>
-                <h5 >Music</h5></a>
-              </li>
-              <li class="nav-list-item">
-                <a href="/blog" class="nav-link">  <i class="fas fa-blog"></i>
-                    <h5>Blogs</h5></a>
-              </li>
-              <li class="nav-list-item">
-                <a href="./contact.html" class="nav-link"><i class="fas fa-phone"></i>
-                <h5 >Contact</h5></a>
-              </li>
-              <li class="nav-list-item">
-                <div class="btn-toggle button" type="button" id="dark-mode">
-                  <i class="fas fa-moon" id="fa-moon1"></i>
-                  <i class="fas fa-sun sun1" id="img-fluid1"></i>
-                </div>
-              </li>
-
-              <li>
-                <div  class="time">
-                  <span class="Time"></span>
-                  <span class="Format"></span>
-                  <div class="date">
-                        <span class="Month"></span>
-                        <span class="Day"></span>
-                  </div>
-                  <div class='partition'>
-                    <span class='temp'></span>
-                  </div>
-                </div>
-              </li>
-            </ul>
-
+  <div class="con">
+    <div class="nav-bar">
+      <div class="toggle-menu">
+        <div class="line line1"></i></div>
+        <div class="line line2"></div>
+        <div class="line line3"></div>
+      </div>
+      <ul class="nav-list">
+        <li class="nav-list-item"><a href="./index.html" class="nav-link"><img src="./images/Logo.png" class="img-fluid"
+              alt="Logo" width="30" height="30" /><h5>Home</h5></a></li>
+        <li class="nav-list-item"><a href="#about" class="nav-link"><i class="fas fa-info"></i>
+            <h5>About</h5>
+          </a></li>
+        <li class="nav-list-item">
+          <a href="#" class="nav-link"> <i class="fas fa-border-all"></i>
+            <h5>Projects</h5>
+          </a>
+        </li>
+        <li class="nav-list-item"><a href="./certificates/cr-main.html" class="nav-link"><i
+              class="fas fa-certificate"></i>
+            <h5>Certificate</h5>
+          </a></li>
+        <li class="nav-list-item">
+          <a href="./gallery.html" class="nav-link"><i class="fas fa-images"></i>
+            <h5>Gallery</h5>
+          </a>
+        </li>
+        <li class="nav-list-item">
+          <a href="./music.html" class="nav-link"><i class="fas fa-play"></i>
+            <h5>Music</h5>
+          </a>
+        </li>
+        <li class="nav-list-item">
+          <a href="/blog" class="nav-link"> <i class="fas fa-blog"></i>
+            <h5>Blogs</h5>
+          </a>
+        </li>
+        <li class="nav-list-item">
+          <a href="./contact.html" class="nav-link"><i class="fas fa-phone"></i>
+            <h5>Contact</h5>
+          </a>
+        </li>
+        <li class="nav-list-item">
+          <div class="btn-toggle button" type="button" id="dark-mode">
+            <i class="fas fa-moon" id="fa-moon1"></i>
+            <i class="fas fa-sun sun1" id="img-fluid1"></i>
           </div>
-        </div>
-      </br></br>
+        </li>
 
-      <div class="row">
-        <div class="col-lg-3">
+        <li>
+          <div class="time">
+            <span class="Time"></span>
+            <span class="Format"></span>
+            <div class="date">
+              <span class="Month"></span>
+              <span class="Day"></span>
+            </div>
+            <div class='partition'>
+              <span class='temp'></span>
+            </div>
+          </div>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+  </br></br>
+
+  <div class="row">
+    <div class="col-lg-2">
       <div id="menu" class="menu">
         <div class="actionsBar">
           <div>
@@ -136,11 +139,7 @@
             </a>
           </li>
           <li class="menuItem">
-            <a
-              href="./certificates/cr-main.html"
-              id="constantManagerBtn"
-              class="menuOption"
-            >
+            <a href="./certificates/cr-main.html" id="constantManagerBtn" class="menuOption">
               <i class="fas fa-certificate"></i>
               <h5 class="menuText">Certificate</h5>
             </a>
@@ -173,16 +172,16 @@
 
         </ul>
         <div class="time">
-        <span class="Time"></span>
-        <span class="Format"></span>
-        <div class="date">
-              <span class="Month"></span>
-              <span class="Day"></span>
+          <span class="Time"></span>
+          <span class="Format"></span>
+          <div class="date">
+            <span class="Month"></span>
+            <span class="Day"></span>
+          </div>
+          <div class='partition'>
+            <span class='temp'></span>
+          </div>
         </div>
-        <div class='partition'>
-          <span class='temp'></span>
-        </div>
-      </div>
 
         <div class="themeBar">
           <div>
@@ -195,137 +194,109 @@
         </div>
       </div>
     </div>
-      <div class="col-lg-9">
-          <h1 class="my-glry">MY GALLERY</h1>
-        <div id="gallery" class="container-fluid">
-          <!-- Menu Bar Creation -->
+    <div class="col-lg-9">
+      <h1 class="my-glry">MY GALLERY</h1>
+      <div id="gallery" class="container-fluid">
+        <!-- Menu Bar Creation -->
 
-          <img
-            src="./images/IMG-20180504-WA0008-1.jpg"
-            class="img-responsive"
-          />
-          <img src="./images/IMG_1737.JPG" class="img-responsive" />
-          <img
-            src="./images/Certificates/Super Student - 2020 - Certificate-007.jpg"
-            class="img-responsive"
-          />
-          <img src="./images/IMG_20200517_085510.jpg" class="img-responsive" />
-          <img
-            src="./images/IMG_20200529_225552_851.jpg"
-            class="img-responsive"
-          />
-          <img src="./images/IMG_1822.JPG" class="img-responsive" />
-          <img src="./images/IMG_7279.JPG" class="card img-responsive" />
-          <img
-            src="./images/IMG_20210512_234009_109.jpg"
-            class="img-responsive"
-          />
-          <img
-            src="./images/Certificates/SamarthGoyal-page-001.jpg"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1623705868049-415863305add?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1581014023865-4209099f2b71?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1504298032419-2e78164cf76e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1505015353489-1759d3cc24e2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1621468444006-a2a0117b7c0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1622890276840-8eabe803e2bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1471931452361-f5ff1faa15ad?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1515863149848-223cbed59017?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1443632864897-14973fa006cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1535224206242-487f7090b5bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1620055374842-145f66ec4652?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            class="img-responsive"
-          />
-          <img
-            src="https://images.unsplash.com/photo-1516905365385-7f89706faaf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-            class="img-responsive"
-          />
-        </div>
-
-        <!-- Modal content-->
-
-        <div class="modal-body"></div>
+        <img src="./images/IMG-20180504-WA0008-1.jpg" class="img-responsive" />
+        <img src="./images/IMG_1737.JPG" class="img-responsive" />
+        <img src="./images/Certificates/Super Student - 2020 - Certificate-007.jpg" class="img-responsive" />
+        <img src="./images/IMG_20200517_085510.jpg" class="img-responsive" />
+        <img src="./images/IMG_20200529_225552_851.jpg" class="img-responsive" />
+        <img src="./images/IMG_1822.JPG" class="img-responsive" />
+        <img src="./images/IMG_7279.JPG" class="card img-responsive" />
+        <img src="./images/IMG_20210512_234009_109.jpg" class="img-responsive" />
+        <img src="./images/Certificates/SamarthGoyal-page-001.jpg" class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1623705868049-415863305add?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1581014023865-4209099f2b71?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1504298032419-2e78164cf76e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1505015353489-1759d3cc24e2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1621468444006-a2a0117b7c0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1622890276840-8eabe803e2bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1471931452361-f5ff1faa15ad?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1515863149848-223cbed59017?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1443632864897-14973fa006cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1535224206242-487f7090b5bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1620055374842-145f66ec4652?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive" />
+        <img
+          src="https://images.unsplash.com/photo-1516905365385-7f89706faaf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive" />
       </div>
+
+      <!-- Modal content-->
+
+      <div class="modal-body"></div>
     </div>
+  </div>
 
-    <!-- Footer Design -->
-    <footer>
-      <p >
-        Copyright © 2021 Samarth Goyal, All Rights Reserved
-      </p>
-    </footer>
+  <!-- Footer Design -->
+  <footer>
+    <p>
+      Copyright © 2021 Samarth Goyal, All Rights Reserved
+    </p>
+  </footer>
 
-    <!-- Bootstrap Js -->
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap Js -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-    <!-- Custom Js -->
+  <!-- Custom Js -->
 
-    <script src="./js/Nav.js"></script>
-    <script src="./js/gallery.js"></script>
+  <script src="./js/Nav.js"></script>
+  <script src="./js/gallery.js"></script>
 
-    <script src="./js/sidebar.js"></script>
-    <!-- Loading Scripts   -->
-    <!-- Jquery Script -->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script>
-      $(window).on("load", function () {
-        $(".load__wrapper").fadeOut("slow");
+  <script src="./js/sidebar.js"></script>
+  <!-- Loading Scripts   -->
+  <!-- Jquery Script -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script>
+    $(window).on("load", function () {
+      $(".load__wrapper").fadeOut("slow");
+    });
+  </script>
+  <script src="./js/mode.js"></script>
+  <script src="./js/mobile.js"></script>
+  <script src="./js/mobmenu.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("img").click(function () {
+        var t = $(this).attr("src");
+        $(".modal-body").css("display", "block");
+        $(".modal-body").html("<img src='" + t + "' class='modal-img'>");
+        $("#myModal").modal();
       });
-    </script>
-    <script src="./js/mode.js"></script>
-    <script src="./js/mobile.js"></script>
-    <script src="./js/mobmenu.js"></script>
-    <script>
-      $(document).ready(function () {
-        $("img").click(function () {
-          var t = $(this).attr("src");
-          $(".modal-body").css("display","block");
-          $(".modal-body").html("<img src='" + t + "' class='modal-img'>");
-          $("#myModal").modal();
-        });
-        $(".modal-body").click(function () {
+      $(".modal-body").click(function () {
 
-          $(".modal-body").css("display","none");
+        $(".modal-body").css("display", "none");
 
-        });
       });
+    });
 
-    </script>
-  </body>
+  </script>
+</body>
+
 </html>
